Fix vertical alignment for search-close

--- a/css/speisekarte.css
+++ b/css/speisekarte.css
@@ -1,3 +1,9 @@
+#search-close {
+    height: inherit;
+    display: flex;
+    align-items: center;
+}
+
 h2 {
     margin-bottom: 2rem;
 }
